# two-level-moe-cache

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  build.sh  clippy.toml  pyproject.toml
cli/: Cargo.toml
data/models/: .gitignore
docs/: Two Level Caching MOE large language model.md
libs/backend/: Cargo.toml  lib.rs
libs/core/: Cargo.toml  build.rs  lib.rs  pyproject.toml  python_types.rs  watermark_cache.rs
libs/core/cache/: interface.rs  manager.rs  mock.rs  mod.rs
libs/core/tests/: pyo3_integration.rs
libs/core/types/: config.rs  conversions.rs  core_expert.rs  expert.rs  memory.rs  mod.rs  model.rs  status.rs
libs/policy/: Cargo.toml  constants.rs  lib.rs
libs/policy/ewma/: config.rs  error.rs  mod.rs  predictor.rs
libs/policy/fusion/: config.rs  error.rs  mod.rs  predictor.rs
libs/policy/scoutgate/: config.rs  context_processing.rs  error.rs  expert_embedding.rs  hyperparamater.rs  layer_embedding.rs  mod.rs  predictor.rs  token_embedding.rs  two_tower.rs
libs/policy/tests/: burn_integration.rs  constants_tests.rs  ewma_tests.rs  scoutgate_debug.rs  scoutgate_integration.rs  timer_tests.rs
libs/policy/timer/: mod.rs
libs/policy/watermark/: algorithm.rs  config.rs  error.rs  mod.rs
libs/runtime/: Cargo.toml  lib.rs
scripts/: __init__.py  download_gptoss.py  download_llm.py
scripts/pyo3/gpt_oss/: model.py  utils.py
scripts/tests/: test_cpu_generation.py
src/: rust_core.pyi
src/adapters/: __init__.py
src/adapters/expert/: __init__.py  base.py  example.py  factory.py  gptoss.py  gptoss20bfast.py
src/boilerplate/gpt_oss/: weights.py
src/boilerplate/gpt_oss/triton/: __init__.py  attention.py  model.py  moe.py
src/cli/: __init__.py  precompute.py
src/common/: __init__.py  types.py
src/config/: __init__.py  cache_config.py
src/config/util/: __init__.py
src/domain/: __init__.py
src/domain/cache/entities/: __init__.py  expert.py  types.py
src/domain/cache/interfaces/: __init__.py  expert_cache.py  memory_tier.py
src/domain/gpt_oss/: __init__.py  generator.py  lazy_tensor.py  model.py  moe.py
src/domain/manager/: __init__.py  direct_nvme.py  direct_ram.py  direct_vram_cache.py  expert_cache.py  lru.py  lru_expert_cache.py  memory_tier.py  two_tier_wm.py  two_tire_wm.py  utils.py
src/infra/dataprocess/gpt_oss/: __init__.py
src/rust_core/: __init__.py  __init__.pyi
src/services/cache/: __init__.py  expert_cache_factory.py
tests/: gptoss_cpu_boil.py  gptoss_lazy.py  gptoss_wm_lazy.py  test_direct_nvme.py  test_direct_ram.py  test_expert_cache_isolated.py  test_expert_size.py  test_lazy_transformer_integration.py  test_lru.py  test_rust_core_simple.py  test_scoutgate_complete.rs  test_two_tier_wm.py  test_two_tire_wm.py
tests/cache/: __init__.py  test_expert.py
two_level_moe_cache/: __init__.py
