[workspace]
members = ["libs/policy", "libs/core"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]

# Python bindings
pyo3 = { version = "0.26", features = ["auto-initialize", "extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tensor storage
safetensors = "0.6"

# Tokenization
tokenizers = "0.22"

# Math and utilities
ndarray = "0.16"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
