[project]
name = "two-level-moe-cache"
version = "0.1.0"
description = "Two-level MoE cache implementation with build scripts"
readme = "README.md"
authors = [
    { name = "shinnku", email = "nikaidou@shinnku.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
build-helper = "scripts.build:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
