[project]
name = "two-level-moe-cache"
version = "0.1.0"
description = "Two-level MoE cache implementation with build scripts"
readme = "README.md"
authors = [
    { name = "shinnku", email = "nikaidou@shinnku.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "huggingface-hub>=0.34.4",
    "pyyaml>=6.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "pytest>=8.4.2",
]

[project.scripts]
build-helper = "scripts.build:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
