[project]
name = "two-level-moe-cache"
version = "0.1.0"
description = "Two-level MoE cache implementation with build scripts"
readme = "README.md"
authors = [{ name = "shinnku", email = "nikaidou@shinnku.com" }]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "aiohttp>=3.12.15",
    "black>=25.1.0",
    "click>=8.0.0",
    "huggingface-hub>=0.34.4",
    "kernels>=0.10.1",
    "openai-harmony>=0.0.4",
    "packaging>=25.0",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "pyyaml>=6.0",
    "safetensors>=0.6.2",
    "tiktoken>=0.9.0",
    "toml>=0.10.0",
    "tomli>=2.2.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]

[project.optional-dependencies]
dev = ["black>=25.1.0", "flake8>=7.3.0", "pytest>=8.4.2"]

[project.scripts]
build-helper = "scripts.build:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[dependency-groups]
dev = [
    "maturin>=1.9.4",
]
