[package]
name = "core"
version.workspace = true
edition.workspace = true

[lib]
name = "core"
path = "lib.rs"

[features]
default = ["cuda"]
cuda = []

[dependencies]
# Python bindings
pyo3 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tensor storage
safetensors = { workspace = true }

# Tokenization
tokenizers = { workspace = true }

# Math and utilities
ndarray = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
