[package]
name = "policy"
version.workspace = true
edition.workspace = true

[lib]
name = "policy"
path = "lib.rs"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Deep learning framework for ScoutGate neural network components
burn = "0.18"
burn-ndarray = "0.18"
